spade-tests/src/snapshots/spade_tests__typeinference__wal_trace_rst_must_be_clock.snap
---
source: spade-tests/src/typeinference.rs
---
#[wal_traceable(suffix = __)]
struct T {}
fn test(t: T, x: int<10>) -> bool {
    #[wal_trace(rst=x)]
    let t = t;
    false
}


error: Expected type bool, got int<10>
  ┌─ testinput:4:21
  │
4 │     #[wal_trace(rst=x)]
  │                     ^ Expected bool
  │
  = note: Expected bool
               Got int<10>


